# buchhaltungPy

./: .gitignore  README.md  pyproject.toml  render_solytics.sh
.claude/: settings.json
adapters/: py_adapter.py  r_adapter.py  r_wrapper.R
data/: bilanzposten.csv  guvposten.csv  konten.csv
docs/: cli.md
know-how/: Unternehmenssteuerbuchungen.qmd  jahresabschluss.md  wertpapiere-gmbh.md
scripts/: capture_golden.py
src/: _chi2.py  buchhaltung.py  cli.py  datev.py  lohnbuchhaltung.py  render.py
src/lohnsteuer/: __init__.py  lst2023.py  lst2024.py  lst2025.py  lst2026.py
tests/: conftest.py  test_anomalien.py  test_benford.py  test_betriebsergebnis.py  test_bilanz.py  test_buchungsnummer_fix.py  test_cli.py  test_datev.py  test_datev_paket.py  test_ebilanz.py  test_gobd.py  test_guv.py  test_jahresabschluss.py  test_konten.py  test_lohnbuchhaltung.py  test_real_years.py  test_render.py  test_sortiere_journal.py  test_t_konten.py  test_taxes.py  test_validation.py  test_zeitreihe.py
tests/fixtures/: 01_simple_profit.csv  02_simple_loss.csv  03_multi_bookings.csv  04_rounding.csv  05_invalid_unbalanced.csv  06_zero_revenue.csv  07_breakeven.csv  08_one_cent.csv  09_large_amount.csv  10_with_vat.csv  11_with_vat_and_expense.csv  12_personnel_costs.csv  13_depreciation.csv  14_multiple_revenue_streams.csv  15_with_gewinnvortrag.csv  16_multiple_bank_accounts.csv  17_liabilities.csv  18_many_expense_categories.csv  19_boundary_rounding_99.csv  20_financial_income.csv  21_provisions_release.csv  22_full_year_monthly.csv  23_receivables.csv  24_investments.csv  (+7 more)
(+1 files in other folders)
