[project]
name = "buchhaltung"
version = "0.1.0"
description = "Double-entry bookkeeping — cross-language test suite and Python reimplementation"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
